# Zamak

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  M1-16-PATH-B.md  Makefile.bios  Makefile.uefi  README.md  SKILL.md  TODO.md  ZAMAK_Bootloader_PRD_v1.3.docx.md  deny.toml  mjboot_bios.img  rustfmt.toml  zamak.con  zamak_bios.img
.cargo/: config.toml
.forgejo/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bmp_parser.rs  config_parser.rs  config_parser_differential.rs  multiboot_header.rs  uri_parser.rs
libmjboot/: Cargo.toml
libmjboot/src/: config.rs  elf.rs  lib.rs  protocol.rs
libzamak/: Cargo.toml
libzamak/src/: config.rs  elf.rs  ext2.rs  font.rs  fs.rs  gfx.rs  lib.rs  net.rs  protocol.rs  rng.rs  tui.rs
mjloader/: Cargo.toml
mjloader/src/: main.rs
scripts/: make_hybrid.sh
zamak-bios/: Cargo.toml  build.rs  i686-zamak.json  linker.ld
zamak-bios/.cargo/: config.toml
zamak-bios/src/: allocator.rs  boot_bundle.rs  disk.rs  entry.asm  entry.rs  fat32.rs  input.rs  main.rs  mbr.rs  mmap.rs  paging.rs  ram_disk.rs  rm_io.rs  smp.rs  trampoline.rs  utils.rs  vbe.rs
zamak-bios/stage1/: mbr.asm  trampoline.asm
zamak-cli/: Cargo.toml
zamak-cli/src/: args.rs  env.rs  error.rs  hash.rs  json.rs  main.rs  meta.rs  output.rs  schema.rs  time.rs  tui.rs  validate.rs
zamak-cli/src/commands/: bench.rs  completions.rs  describe.rs  enroll_config.rs  install.rs  mod.rs  sbom.rs  schema_cmd.rs
zamak-cli/tests/: sfrs_conformance.rs
zamak-core/: Cargo.toml
zamak-core/src/: addr.rs  arch.rs  blake2b.rs  chainload.rs  config.rs  config_discovery.rs  elf.rs  enrolled_hash.rs  ext2.rs  font.rs  fs.rs  gfx.rs  iso9660.rs  lib.rs  linux_boot.rs  multiboot.rs  multiboot2.rs  net.rs  pe.rs  pmm.rs  protocol.rs  ram_fat32.rs  rng.rs  theme_loader.rs  tui.rs  uri.rs  vmm.rs  wallpaper.rs
zamak-core/src/assets/: font.psf
zamak-core/tests/: limine_reference_model.rs  proptests.rs
zamak-decompressor/: Cargo.toml  linker.ld
zamak-decompressor/.cargo/: config.toml
zamak-decompressor/src/: bump.rs  entry.rs  main.rs
zamak-linux-stub-kernel/: Cargo.toml  linker.ld
zamak-linux-stub-kernel/src/: main.rs
zamak-loader/: Cargo.toml
zamak-loader/src/: main.rs
zamak-macros/: Cargo.toml
zamak-macros/src/: lib.rs
zamak-proto/: Cargo.toml
zamak-proto/src/: lib.rs
zamak-stage1/: Cargo.toml  build.rs  i686-zamak-stage1.json  linker.ld
zamak-stage1/src/: main.rs  mbr.rs
zamak-test/: Cargo.toml  build-images.sh
zamak-test-kernel/: Cargo.toml  linker.ld
zamak-test-kernel/.cargo/: config.toml
zamak-test-kernel/src/: asm_verify.rs  main.rs
zamak-test/src/: main.rs
zamak-theme/: Cargo.toml
zamak-theme/src/: lib.rs
zamak-uefi/: Cargo.toml
zamak-uefi/src/: handoff.rs  main.rs  paging.rs
