# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
    "zamak-stage1",
    "zamak-uefi",
    "zamak-core",
    "zamak-bios",
    "zamak-decompressor",
    "zamak-proto",
    "zamak-theme",
    "zamak-cli",
    "zamak-test",
    "zamak-macros",
]
# zamak-test-kernel + zamak-linux-stub-kernel are excluded from the
# workspace so their own `.cargo/config.toml` (with `build-std`) can
# apply without the workspace's stable-toolchain alias interfering.
# Build them explicitly with:
#     cargo +nightly build --manifest-path zamak-test-kernel/Cargo.toml --release
#     cargo +nightly build --manifest-path zamak-linux-stub-kernel/Cargo.toml --release
exclude = ["zamak-test-kernel", "zamak-linux-stub-kernel"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
