# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zamak-bios"
version = "0.8.5"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
# SMP AP bring-up. Off by default: the trampoline asm needs a
# position-independent rewrite to link against the current `.trampoline`
# section placement (see zamak-bios/src/main.rs module comment).
smp = []
# Legacy 32→real→32 BIOS trampoline (pre-M1-16 Path B). Kept behind a
# feature so the old `call_bios_int` / `Disk` / protected-mode
# `get_memory_map` / VBE callers can still be resurrected for
# regression comparison. The default build does all BIOS I/O in
# real mode before CR0.PE — see M1-16 Path B.
legacy_trampoline = []

[dependencies]
zamak-core = { path = "../zamak-core", version = "0.8.5" }
zamak-theme = { path = "../zamak-theme", version = "0.8.5" }
log = "0.4"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
limine-protocol = "0.5"
goblin = { version = "0.7", default-features = false, features = ["elf32", "elf64"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
