# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zamak-core"
version = "0.8.5"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
zamak-proto = { path = "../zamak-proto", version = "0.8.5" }
zamak-macros = { path = "../zamak-macros", version = "0.8.5" }
zamak-theme = { path = "../zamak-theme", version = "0.8.5" }
limine-protocol = "0.5"
goblin = { version = "0.7", default-features = false, features = ["elf64", "elf32", "endian_fd", "alloc"] }

[dev-dependencies]
proptest = "1"
