# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zamak-core"
version = "0.9.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
zamak-proto = { path = "../zamak-proto", version = "0.9.0" }
zamak-macros = { path = "../zamak-macros", version = "0.9.0" }
zamak-theme = { path = "../zamak-theme", version = "0.9.0" }
limine-protocol = "0.5"
goblin = { version = "0.7", default-features = false, features = ["elf64", "elf32", "endian_fd", "alloc"] }

[dev-dependencies]
proptest = "1"
