# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2026 Mohamed Hammad

[package]
name = "zamak-linux-stub-kernel"
version = "0.9.0"
edition = "2021"
description = "Stub Linux-Boot-Protocol bzImage for zamak-test's linux-bzimage smoke suite (M2-12). Emits 'Linux version 0.0.0-zamak-stub' on COM1 and exits via QEMU isa-debug-exit."
license = "GPL-3.0-or-later"

[[bin]]
name = "zamak-linux-stub-kernel"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
