# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zamak-macros"
version = "0.7.0"
edition = "2021"
description = "Procedural macros for ZAMAK bootloader safety annotations"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
