# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zamak-macros"
version = "0.8.4"
edition = "2021"
description = "Procedural macros for ZAMAK bootloader safety annotations"
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
