# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2026 Mohamed Hammad

[package]
name = "zamak-test-kernel"
version = "0.8.0"
edition = "2021"
description = "Minimal Limine-Protocol test kernel for zamak-test end-to-end smoke tests"
license = "GPL-3.0-or-later"

[[bin]]
name = "zamak-test-kernel"
path = "src/main.rs"

# A second kernel that boots via Limine Protocol, runs every safe asm
# wrapper, and prints `ASM_VERIFY_OK` to COM1 if the resulting hardware
# state matches the expected values (TEST-4 / §3.9.9 / CI-10).
[[bin]]
name = "zamak-asm-verify-kernel"
path = "src/asm_verify.rs"

[dependencies]
zamak-proto = { path = "../zamak-proto", version = "0.8.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
