# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zamak-uefi"
version = "0.8.1"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
uefi = "0.24"
uefi-services = "0.21"
limine-protocol = "0.5"
zamak-core = { path = "../zamak-core", version = "0.8.1" }
zamak-theme = { path = "../zamak-theme", version = "0.8.1" }
log = "0.4"

# x86-specific crate — only depend on it when we actually target x86-64 so
# the AArch64 / RISC-V / LoongArch builds don't try to compile it.
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
